Move all DOI logic to the DoiChangeListener and just publish events when DOIs need to be created, changed, published or deleted